Opened 14 years ago

Closed 14 years ago

#1549 closed defect (fixed)

adpcm_ea_r1 is not auto-detected

Reported by: Carl Eugen Hoyos Owned by:
Priority: normal Component: avformat
Version: git-master Keywords: electronicarts roundup
Cc: Blocked By:
Blocking: Reproduced by developer: no
Analyzed by developer: no

Description

(issue 2291)
http://samples.ffmpeg.org/ffmpeg-bugs/roundup/issue2290/DEMO.MPC is incorrectly auto-detected, out2.wav is white-noise, out1.wav plays fine:

$ ffmpeg -acodec adpcm_ea_r1 -i DEMO.MPC out1.wav
ffmpeg version N-42594-g56ae592 Copyright (c) 2000-2012 the FFmpeg developers
  built on Jul 18 2012 09:14:59 with gcc 4.3.2
  configuration: --cc=/usr/local/gcc-4.3.2/bin/gcc --enable-gpl --enable-libopenjpeg --enable-libvorbis --enable-libspeex --enable-libmp3lame --enable-libtheora --extra-ldflags=-lm --enable-libvpx --enable-libxavs --enable-x11grab --enable-libass
  libavutil      51. 65.100 / 51. 65.100
  libavcodec     54. 41.100 / 54. 41.100
  libavformat    54. 17.100 / 54. 17.100
  libavdevice    54.  1.100 / 54.  1.100
  libavfilter     3.  2.100 /  3.  2.100
  libswscale      2.  1.100 /  2.  1.100
  libswresample   0. 15.100 /  0. 15.100
  libpostproc    52.  0.100 / 52.  0.100
revision: 2
revision2: 10
[ea @ 0x9077580] max_analyze_duration 5000000 reached at 5005000
Guessed Channel Layout for  Input Stream #0.1 : stereo
Input #0, ea, from 'DEMO.MPC':
  Duration: 00:00:00.00, start: 0.000000, bitrate: -2147483 kb/s
    Stream #0:0: Video: mpeg2video (Main), yuv420p, 640x448 [SAR 1:1 DAR 10:7], 3851 kb/s, 29.97 fps, 29.97 tbr, 90k tbn, 59.94 tbc
    Stream #0:1: Audio: adpcm_ea_r1, 48000 Hz, stereo, s16, 384 kb/s
Output #0, wav, to 'out1.wav':
  Metadata:
    encoder         : Lavf54.17.100
    Stream #0:0: Audio: pcm_s16le ([1][0][0][0] / 0x0001), 48000 Hz, stereo, s16, 1536 kb/s
Stream mapping:
  Stream #0:1 -> #0:0 (adpcm_ea_r1 -> pcm_s16le)
Press [q] to stop, [?] for help
[adpcm_ea_r1 @ 0x907de00] mismatch in coded sample count
    Last message repeated 2042 times
DEMO.MPC: Invalid data found when processing input
size=   12781kB time=00:01:08.16 bitrate=1536.0kbits/s
video:0kB audio:12781kB subtitle:0 global headers:0kB muxing overhead 0.000351%
$ ffmpeg -i DEMO.MPC out2.wav
ffmpeg version N-42594-g56ae592 Copyright (c) 2000-2012 the FFmpeg developers
  built on Jul 18 2012 09:14:59 with gcc 4.3.2
  configuration: --cc=/usr/local/gcc-4.3.2/bin/gcc --enable-gpl --enable-libopenjpeg --enable-libvorbis --enable-libspeex --enable-libmp3lame --enable-libtheora --extra-ldflags=-lm --enable-libvpx --enable-libxavs --enable-x11grab --enable-libass
  libavutil      51. 65.100 / 51. 65.100
  libavcodec     54. 41.100 / 54. 41.100
  libavformat    54. 17.100 / 54. 17.100
  libavdevice    54.  1.100 / 54.  1.100
  libavfilter     3.  2.100 /  3.  2.100
  libswscale      2.  1.100 /  2.  1.100
  libswresample   0. 15.100 /  0. 15.100
  libpostproc    52.  0.100 / 52.  0.100
[ea @ 0x90774e0] max_analyze_duration 5000000 reached at 5005000
Guessed Channel Layout for  Input Stream #0.1 : stereo
Input #0, ea, from 'DEMO.MPC':
  Duration: 00:00:00.00, start: 0.000000, bitrate: -2147483 kb/s
    Stream #0:0: Video: mpeg2video (Main), yuv420p, 640x448 [SAR 1:1 DAR 10:7], 3851 kb/s, 29.97 fps, 29.97 tbr, 90k tbn, 59.94 tbc
    Stream #0:1: Audio: adpcm_ea_r2, 48000 Hz, stereo, s16, 384 kb/s
Output #0, wav, to 'out2.wav':
  Metadata:
    encoder         : Lavf54.17.100
    Stream #0:0: Audio: pcm_s16le ([1][0][0][0] / 0x0001), 48000 Hz, stereo, s16, 1536 kb/s
Stream mapping:
  Stream #0:1 -> #0:0 (adpcm_ea_r2 -> pcm_s16le)
Press [q] to stop, [?] for help
[adpcm_ea_r2 @ 0x907dd80] mismatch in coded sample count
    Last message repeated 828 times
mismatch in coded sample count66 bitrate=1535.3kbits/s
[adpcm_ea_r2 @ 0x907dd80] mismatch in coded sample count
    Last message repeated 637 times
mismatch in coded sample count98 bitrate=1536.0kbits/s
[adpcm_ea_r2 @ 0x907dd80] mismatch in coded sample count
    Last message repeated 573 times
DEMO.MPC: Invalid data found when processing input
size=   12781kB time=00:01:08.16 bitrate=1536.0kbits/s
video:0kB audio:12781kB subtitle:0 global headers:0kB muxing overhead 0.000351%

Change History (2)

comment:1 by Carl Eugen Hoyos, 14 years ago

Keywords: roundup added

comment:2 by Carl Eugen Hoyos, 14 years ago

Resolution: fixed
Status: newclosed

Fixed by Peter Ross.

Note: See TracTickets for help on using tickets.